# eNI

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  README.md  valgrind.supp
.github/workflows/: book-build.yml  ci.yml  codeql.yml  eosim-sanity.yml  nightly.yml  release.yml  simulation-test.yml  simulation.yml  video-build.yml  weekly.yml
bindings/java/: EniSession.java  eni_jni.c
bindings/rust/: Cargo.toml  build.rs
blockchain/: CMakeLists.txt
blockchain/contracts/: ConsentManager.sol  DeviceRegistry.sol  NeuralDataRegistry.sol
blockchain/include/eni_bc/: blockchain.h  client.h  consent.h  crypto.h  device.h  provenance.h  sharing.h  types.h
blockchain/src/: blockchain.c  client.c  consent.c  crypto.c  device.c  provenance.c  sharing.c  types.c
build-linux/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
build-linux/cli/: Makefile  cmake_install.cmake  eni
build-linux/common/: Makefile  cmake_install.cmake
build-linux/framework/: Makefile  cmake_install.cmake
build-linux/min/: Makefile  cmake_install.cmake
build-linux/platform/: Makefile  cmake_install.cmake
build-linux/providers/: Makefile  cmake_install.cmake
build-linux/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  eni_test_bci_pipeline  eni_test_calibration_session  eni_test_common  eni_test_concurrent_stress  eni_test_config_extended  eni_test_data_formats  eni_test_decoder  eni_test_decoder_extended  eni_test_dsp  eni_test_dsp_extended  eni_test_event  eni_test_event_coverage  eni_test_event_feedback  eni_test_filter  eni_test_framework  eni_test_full_pipeline  eni_test_fw_decoder  eni_test_fw_feedback  eni_test_json  eni_test_log_coverage  eni_test_min  eni_test_mini_session  eni_test_neuralink  eni_test_nn  eni_test_nn_extended  eni_test_normalizer  eni_test_platform_extended  eni_test_policy  eni_test_policy_coverage  eni_test_provider_eeg  eni_test_provider_lifecycle  eni_test_providers  eni_test_session_calibration  eni_test_stim_safety  eni_test_stim_safety_coverage  eni_test_stim_safety_extended  eni_test_stimulator  (+4 more)
build-test/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  ENI.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  static-analysis.vcxproj  static-analysis.vcxproj.filters  test_mini_session.c
build-test/cli/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  eni.vcxproj  eni.vcxproj.filters
build-test/common/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  eni_common.vcxproj  eni_common.vcxproj.filters
build-test/framework/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  eni_framework.vcxproj  eni_framework.vcxproj.filters
build-test/min/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  eni_min.vcxproj  eni_min.vcxproj.filters
build-test/platform/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  eni_platform.vcxproj  eni_platform.vcxproj.filters
build-test/providers/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  eni_providers.vcxproj  eni_providers.vcxproj.filters
build-test/tests/: CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  eni_e2e_test_profile.json  eni_test_bci_pipeline.vcxproj  eni_test_bci_pipeline.vcxproj.filters  eni_test_calibration_session.vcxproj  eni_test_calibration_session.vcxproj.filters  eni_test_common.vcxproj  eni_test_common.vcxproj.filters  eni_test_concurrent_stress.vcxproj  eni_test_concurrent_stress.vcxproj.filters  eni_test_config_extended.vcxproj  eni_test_config_extended.vcxproj.filters  eni_test_data_formats.vcxproj  eni_test_data_formats.vcxproj.filters  eni_test_decoder.vcxproj  eni_test_decoder.vcxproj.filters  eni_test_decoder_extended.vcxproj  eni_test_decoder_extended.vcxproj.filters  eni_test_dsp.vcxproj  eni_test_dsp.vcxproj.filters  eni_test_dsp_extended.vcxproj  eni_test_dsp_extended.vcxproj.filters  eni_test_event.vcxproj  eni_test_event.vcxproj.filters  eni_test_event_coverage.vcxproj  eni_test_event_coverage.vcxproj.filters  eni_test_event_feedback.vcxproj  eni_test_event_feedback.vcxproj.filters  eni_test_filter.vcxproj  eni_test_filter.vcxproj.filters  eni_test_framework.vcxproj  eni_test_framework.vcxproj.filters  eni_test_full_pipeline.vcxproj  eni_test_full_pipeline.vcxproj.filters  eni_test_fw_decoder.vcxproj  eni_test_fw_decoder.vcxproj.filters  eni_test_fw_feedback.vcxproj  (+47 more)
cmake/: memcheck.cmake  static-analysis.cmake
common/: CMakeLists.txt
common/include/eni/: annotation.h  bdf.h  calibration.h  common.h  data_format.h  device_manager.h  edf.h  eni_format.h  json.h  mempool.h  player.h  profile.h  recorder.h  recovery.h  safe_string.h  session.h  transfer.h  types.h  xdf.h
common/src/: annotation.c  bdf.c  calibration.c  config.c  data_format.c  decoder.c  device_manager.c  edf.c  eni_format.c  feedback.c  json.c  mempool.c  player.c  profile.c  provider.c  recorder.c  recovery.c  session.c  stim_safety.c  tool_call.c  transfer.c  xdf.c
docs/: ARCHITECTURE.md  BUILDING.md  COMPETITIVE_ANALYSIS.md  GETTING_STARTED.md  PRODUCT_OVERVIEW.md
docs/book/: book.md  references.bib
framework/: CMakeLists.txt
gui/: package.json
platform/: CMakeLists.txt
platform/eos/: platform_eos.c
platform/include/eni_platform/: platform.h
platform/linux/: platform_linux.c
platform/macos/: platform_macos.c
platform/posix/: platform_posix.c
platform/windows/: platform_windows.c
promo/: generate_audio.py  promo_scene.py
tests/: CMakeLists.txt  test_config_extended.c  test_data_formats.c  test_event_coverage.c  test_fw_decoder.c  test_fw_feedback.c  test_json.c  test_log_coverage.c  test_mini_session.c  test_platform_extended.c  test_policy_coverage.c  test_session_calibration.c  test_stim_safety_coverage.c  test_stream_bus_extended.c  test_thread_safety.c  test_types_coverage.c
tests/integration/: test_calibration_session.c
tests/mocks/: mock_provider.c
tests/stress/: test_concurrent_stress.c
(+520 files in other folders)
